hero section part 2

--- a/04-hero.html
+++ b/04-hero.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <title>Omifood Hero Section</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -23,14 +23,17 @@
             color: #444;
         }
 
-        .container{
+        .container {
             margin: 0 auto;
             width: 1200px;
         }
 
-        header{
-            background-color: orangered;
+        header {
             height: 100vh;
+            position: relative;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(hero.jpg);
+            background-size: cover;
+            color: #fff;
         }
 
         nav {
@@ -38,12 +41,33 @@
             font-weight: 700;
             display: flex;
             justify-content: space-between;
-            background-color: green;
+            padding-top: 32px;
+            /* background-image: linear-gradient( to right,red , blue); */
+        }
+
+        .header-container {
+            width: 1200px;
+            position: absolute;
+
+            /* in relation to PARENT size */
+            left: 50%;
+            top: 50%;
+
+            /* in relation to ELEMENT size */
+            transform: translate(-50%, -50%);
+
+
+            /* text-align: center; */
+        }
+
+        .header-container-inner {
+            width: 50%;
         }
 
         h1 {
             font-size: 52px;
             margin-bottom: 32px;
+            line-height: 1.05;
         }
 
         p {
@@ -64,32 +88,33 @@
             border-radius: 9px;
         }
 
-        h2{
+        h2 {
             font-size: 44px;
             margin-bottom: 48px;
         }
 
-        section{
+        section {
             padding: 96px 0;
-            background-color: #f7f7f7;
         }
     </style>
 </head>
 
 <body>
-    <header >
+    <header>
         <nav class="container">
             <div>LOGO</div>
             <div>NAVIGATION</div>
 
         </nav>
-        <div class="container">
-            <h1>A healty meal delivered to your door , every single day</h1>
-            <p>The smart 365-days-per-year food subscription that will make you eat healty algin.Tailored to your
-                personal
-                testes and nutritional needs
-            </p>
-            <a href="#" class="btn">Start eating well</a>
+        <div class="header-container">
+            <div class="header-container-inner">
+                <h1>A healty meal delivered to your door , every single day</h1>
+                <p>The smart 365-days-per-year food subscription that will make you eat healty algin.Tailored to your
+                    personal
+                    testes and nutritional needs
+                </p>
+                <a href="#" class="btn">Start eating well</a>
+            </div>
         </div>
     </header>
     <section>
